syntax = "proto3";

package ecommerce;

// Messages for different order types
message PhysicalOrder {
    string shipping_address = 1;
    double weight = 2;
}

message DigitalOrder {
    string download_link = 1;
    int64 expires_at = 2;
}

message SubscriptionOrder {
    string billing_cycle = 1;
    double monthly_fee = 2;
}

// Main order message with oneof for different order types
message Order {
    string id = 1;
    string customer_name = 2;
    double total_amount = 3;
    
    // This is our oneof field - exactly one of these will be set
    oneof order_type {
        PhysicalOrder physical = 4;
        DigitalOrder digital = 5;
        SubscriptionOrder subscription = 6;
    }
    
    // Optional timestamp field for testing well-known types
    google.protobuf.Timestamp created_at = 7;
}

// Simple message for basic testing
message Customer {
    string name = 1;
    string email = 2;
    repeated string phone_numbers = 3;
}